--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.10.0-M1</junit.version>
     <restassured.version>5.3.0</restassured.version>
+    <allure.version>2.22.0</allure.version>
   </properties>
 
   <dependencies>
@@ -28,6 +29,13 @@
       <version>${restassured.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-junit5</artifactId>
+      <version>2.22.0</version>
+      <scope>test</scope>
+    </dependency>
+
 
 
   </dependencies>
