--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <junit.version>5.10.0-M1</junit.version>
     <restassured.version>5.3.0</restassured.version>
     <allure.version>2.22.0</allure.version>
+    <allure-maven.version>2.10.0</allure-maven.version>
+
+    <allure.cmd.download.url>
+      https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline
+    </allure.cmd.download.url>
   </properties>
 
   <dependencies>
@@ -36,7 +41,20 @@
       <scope>test</scope>
     </dependency>
 
-
-
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>${allure-maven.version}</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+          <allureDownloadUrl>
+            ${allure.cmd.download.url}/${allure.version}/allure-commandline-${allure.version}.zip
+          </allureDownloadUrl>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
