--- a/pom.xml
+++ b/pom.xml
@@ -1,60 +1,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>AutomationExercise</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.expandtesting</groupId>
+    <artifactId>practice-expandtesting-testsuntitled</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>AutomationExercise</name>
-  <url>http://maven.apache.org</url>
+    <name>practice-expandtesting-testsuntitled</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.version>5.10.0-M1</junit.version>
-    <restassured.version>5.3.0</restassured.version>
-    <allure.version>2.22.0</allure.version>
-    <allure-maven.version>2.10.0</allure-maven.version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.version>5.10.0-M1</junit.version>
+        <aeonbits.version>1.0.12</aeonbits.version>
+    </properties>
 
-    <allure.cmd.download.url>
-      https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline
-    </allure.cmd.download.url>
-  </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>${aeonbits.version}</version>
+        </dependency>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>${restassured.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.qameta.allure</groupId>
-      <artifactId>allure-junit5</artifactId>
-      <version>2.22.0</version>
-      <scope>test</scope>
-    </dependency>
 
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>io.qameta.allure</groupId>
-        <artifactId>allure-maven</artifactId>
-        <version>${allure-maven.version}</version>
-        <configuration>
-          <reportVersion>${allure.version}</reportVersion>
-          <allureDownloadUrl>
-            ${allure.cmd.download.url}/${allure.version}/allure-commandline-${allure.version}.zip
-          </allureDownloadUrl>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    </dependencies>
 </project>
