--- a/src/test/resources/api.properties
+++ b/src/test/resources/api.properties
@@ -1,5 +1,5 @@
 base.uri=https://practice.expandtesting.com
-base.path=/notes/api/
+base.path=/notes/api
 health.check=/health-check
 users.register=/users/register
 users.login=/users/login
